--- a/src/sample/main.fxml
+++ b/src/sample/main.fxml
@@ -3,15 +3,15 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<SplitPane dividerPositions="0.29797979797979796" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<SplitPane dividerPositions="0.29797979797979796" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
     <items>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="258.0" prefWidth="81.0">
             <VBox prefHeight="200.0" prefWidth="231.0">
                 <fx:include fx:id="petriMenu" source="editorMenu/PetriMenu.fxml" />
-                <Label text="Ajout" />
                 <Label fx:id="labelPosition" />
                 <Button onMouseClicked="#openMarquage" text="Voir le graphe de marquage" />
             <Button mnemonicParsing="false" onMouseClicked="#importReseau" prefHeight="26.0" prefWidth="165.0" text="Importer un réseau" />
+            <Button layoutX="10.0" layoutY="184.0" mnemonicParsing="false" onMouseClicked="#exportReseau" prefHeight="26.0" prefWidth="165.0" text="Exporter réseau" />
             </VBox>
             <Pane fx:id="graphMarquage" layoutY="200.0" prefHeight="200.0" prefWidth="175.0" />
         </AnchorPane>
